<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/his"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp">


        <TextView
            android:id="@+id/note1"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="5sp"
            android:text="@string/note1"
            android:textStyle="bold"
             />
        <TextView
            android:id="@+id/note2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/note1"
            android:gravity="center_vertical"
            android:paddingTop="10dp"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:lineSpacingExtra="5sp"
            android:text="@string/note2"
            android:textStyle="bold"
             />
        <TextView
            android:id="@+id/note3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/note2"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:lineSpacingExtra="5sp"
            android:text="@string/note3"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/noteimg"
            android:layout_width="328dp"
            android:layout_height="360dp"
            android:layout_below="@+id/note3"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/flowchart1" />

        <TextView
            android:id="@+id/note4"
            android:layout_width="wrap_content"
            android:layout_height="548dp"
            android:layout_below="@+id/noteimg"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:lineSpacingExtra="5sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/note4"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/note5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/note4"
            android:gravity="center_vertical"
            android:paddingTop="10dp"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:lineSpacingExtra="5sp"
            android:text="@string/note5"
            android:textStyle="bold"
            />


    </LinearLayout>

</ScrollView>